CTW: C2 (Shenandoah) compilation fails with "Range check dependent CastII node was not removed"

XMLWordPrintable

    • b10

        This fails with sh/jdk11, but not with jdk/jdk. It also fails only with Shenandoah. Might be a missing backport, or vanilla sh/jdk11 problem.

        $ wget https://repo1.maven.org/maven2/com/iheartradio/m3u8/open-m3u8/0.2.6/open-m3u8-0.2.6.jar
        $ wget https://cr.openjdk.java.net/~shade/ctw/ctw-jdk11.zip
        $ unzip ctw-jdk11.zip
        $ JAVA_HOME=../shenandoah-jdk11/build/linux-x86_64-normal-server-fastdebug/images/jdk JAVA_OPTIONS="-XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC" ./ctw.sh open-m3u8-0.2.6.jar

        # Internal Error (/home/shade/trunks/shenandoah-jdk11/src/hotspot/share/opto/compile.cpp:3278), pid=27469, tid=27502
        # assert(false) failed: Range check dependent CastII node was not removed

              Assignee:
              Roland Westrelin
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: