8238385: CTW: C2 (Shenandoah) compilation fails with "Range check dependent CastII node was not removed"

Reviewed-by: rkennke, shade